refine codes of spring cloud thread config override, make sure everything goes right